--- a/src/pages/Note/styles.css
+++ b/src/pages/Note/styles.css
@@ -1,3 +1,7 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 * {
   margin: 0;
   padding: 0;
@@ -10,12 +14,20 @@
   gap: 10px;
 }
 
+.editor-preview__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 .editor {
   border: 1px solid black;
   padding: 20px;
+  flex: 1 1 500px;
 }
 
 .preview {
   background-color: beige;
   padding: 20px;
+  flex: 1 1 500px;
+  min-height: 19px;
 }
